# YTU-DEPTRON

./: README.md  config.py  solutıon-plan.md
VLM-RL/: README.md  Readme.md  config.py  manual_control_sensors.py  pyproject.toml
cabin-display/: main.py  mqtt-test.py  pyproject.toml  test_publisher.py
cabin-display/mqtt/: zenoh_client.py
cabin-display/ui/: dashboard_window.py
cabin-display/widgets/: speed_gauge.py
cabine/: config.py
cabine/widgets/: info_panel.py
iot-devkit/: README-FIRST.md
iot-devkit/MXChip/AZ3166/app/: CMakeLists.txt  cloud_config.h  main.c  mqtt_client.c  sntp_client.c  wwd_networking.c
iot-devkit/MXChip/AZ3166/scripts/: build.bat  deploy.bat
ui/: dashboard_window.py
widgets/: obstacle_map.py
